--- a/config/.stylelintrc
+++ b/config/.stylelintrc
@@ -2,7 +2,7 @@
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
     "scss/at-rule-no-unknown": [ true, { 
-      "ignoreAtRules": ["tailwind", "apply"] 
+      "ignoreAtRules": ["tailwind", "apply", "responsive"] 
     }],
     "selector-no-qualifying-type": [ true, {
       "ignore": ["class"]
