--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "4.11.0",
     "postcss-flexbugs-fixes": "3.3.1",
     "postcss-loader": "2.1.5",
+    "postcss-prefix-selector": "1.7.1",
     "prettier": "1.12.1",
     "prettier-eslint-cli": "4.7.1",
     "sass-loader": "7.0.1",
