--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@wordpress/compose": "3.2.0",
     "clone-deep": "4.0.1",
     "data.task": "3.1.2",
+    "jquery": "3.4.0",
     "tailwindcss": "1.0.0-beta.4"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
     "image-webpack-loader": "4.6.0",
+    "include-media": "1.4.9",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.11.0",
     "postcss-flexbugs-fixes": "3.3.1",
