--- a/config/.eslintrc
+++ b/config/.eslintrc
@@ -73,7 +73,7 @@
     "no-extra-semi": "error",
     "no-fallthrough": "error",
     "no-lonely-if": "error",
-    "no-mixed-operators": "error",
+    "no-mixed-operators": "off",
     "no-mixed-spaces-and-tabs": "error",
     "no-multiple-empty-lines": ["error", { "max": 1 }],
     "no-multi-spaces": "error",
