--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "data.task": "3.1.2",
     "googleapis": "27.0.0",
     "jquery": "3.4.0",
-    "tailwindcss": "1.0.0-beta.4"
+    "tailwindcss": "1.0.1"
   },
   "devDependencies": {
     "ajv": "6.9.1",
