--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --mode=development --watch --config=config/webpack.config.js",
+    "start":
+      "webpack --mode=development --watch --config=config/webpack.config.js",
     "build": "webpack --mode=production --config=config/webpack.config.js"
   }
 }
